--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ body {
     max-width: 800px;
     margin: 0 auto;
     font-family: "Inter", sans-serif;
+    background-color: var(--base-color);
 }
 
 h1 {
@@ -83,8 +84,8 @@ button:hover {
 }
 
 main {
-    background-color: var(--base-color);
-    padding: 20px;
+    
+    /* padding: 20px; */
     text-align: center;
 }
 
